k8s/ingress.yaml
# we gebruiken ingress om onze frontend en backend toegankelijk te maken buiten de cluster via een veilige manier.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: svb-ingress
    namespace: svb-webstack
    labels:
        app.kubernetes.io/name: svb-webstack
        app.kubernetes.io/component: ingress
    annotations:
        # we gebruiken traefik als ingress controller
        kubernetes.io/ingress.class: traefik

        traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
    ingressClassName: traefik
    rules:
     # ons duckdns domein
        - host: svb-milestone2.duckdns.org
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: svb-backend
                            port:
                                number: 8000

                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: svb-frontend
                            port:
                                number: 80

        # localhost fallback om tests te doen en te werken zonder dat duckdns beschikbaar is
        - http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: svb-backend
                            port:
                                number: 8000

                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: svb-frontend
                            port:
                                number: 80


---
# ingress voor https connectie
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: svb-ingress-https
    namespace: svb-webstack
    labels:
        app.kubernetes.io/name: svb-webstack
        app.kubernetes.io/component: ingress-https
    annotations:
        kubernetes.io/ingress.class: traefik
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt # we gebruiken de ingebouwde letsencrupt van traefik
spec:
    ingressClassName: traefik

    rules:
        # localhost fallback voor HTTPS
        - http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: svb-backend
                            port:
                                number: 8000

                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: svb-frontend
                            port:
                                number: 80

        # duckdns domain voor HTTPS
        - host: svb-milestone2.duckdns.org
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: svb-backend
                            port:
                                number: 8000

                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: svb-frontend
                            port:
                                number: 80
